# embassy

embassy-cortex-m/: Cargo.toml
embassy-cortex-m/src/: lib.rs  systick.rs
embassy-executor/src/raw/: mod.rs
embassy-gd32/: Cargo.toml
embassy-gd32/src/: afio.rs  cctl.rs  dma.rs  exti.rs  fmc.rs  gpio.rs  lib.rs  spi.rs  time.rs  timedriver_rtc.rs  traits.rs  usart.rs  utils.rs
embassy-gd32/src/chips/: gd32e503.rs
embassy-gd32/src/usart/: buffered.rs  mod.rs  usart.rs
embassy-macros/src/macros/: task.rs
embassy-nrf/src/: time_driver.rs
embassy-stm32/: build.rs
embassy-stm32/src/: time.rs
embassy-stm32/src/adc/: continuous.rs  cyclic.rs  mod.rs  v1.rs
embassy-stm32/src/dma/: dma_bdma.rs  mod.rs  ringbuffer.rs
embassy-stm32/src/rcc/: l4.rs  mod.rs
embassy-stm32/src/timer/: mod.rs
