[package]
name = "embassy-gd32"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-gd32-v$VERSION/embassy-gd32/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-gd32/src/"

features = ["defmt"]
flavors = [
    { regex_feature = "gd32e5.*", target = "thumbv8m.main-none-eabihf" },
]

[dependencies]
embassy-sync = { version = "0.1.0", path = "../embassy-sync" }
embassy-executor = { version = "0.1.0", path = "../embassy-executor" }
embassy-futures = { version = "0.1.0", path = "../embassy-futures" }
embassy-cortex-m = { version = "0.1.0", path = "../embassy-cortex-m", features = ["prio-bits-4"] }
embassy-hal-common = {version = "0.1.0", path = "../embassy-hal-common" }
# embassy-embedded-hal = {version = "0.1.0", path = "../embassy-embedded-hal" }
atomic-polyfill = "1.0.1"
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
nb = "1.0.0"
cfg-if = "1.0.0"
cortex-m-rt = ">=0.6.15,<0.8"
cortex-m = "0.7.6"
critical-section = "1.1"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
chrono = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.3.1", features = ["async"], optional = true }
gd32e5 = { version = "0.7", optional = true }


[features]
default = ["defmt"]
gd32e503 = ["gd32e5/gd32e503", "gd32e5/critical-section"]
