[package]
name = "embassy-gd32"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/embassy/blob/embassy-gd32-v$VERSION/embassy-gd32/src/"
src_base_git = "https://github.com/embassy-rs/embassy/blob/$COMMIT/embassy-gd32/src/"
features = ["nightly", "defmt"]
flavors = [
    { regex_feature = "gd32e5.*", target = "thumbv8m.main-none-eabihf" },
]

[dependencies]
# syn = { version = "1.0.76", features = ["full", "extra-traits"] }
# quote = "1"
embassy-sync = { version = "0.1.0", path = "../embassy-sync" }
embassy-executor = { version = "0.1.0", path = "../embassy-executor" }
embassy-futures = { version = "0.1.0", path = "../embassy-futures" }
embassy-cortex-m = { version = "0.1.0", path = "../embassy-cortex-m", features = ["prio-bits-4"] }
embassy-hal-common = {version = "0.1.0", path = "../embassy-hal-common" }
embassy-time = { version = "0.1.0", path = "../embassy-time", optional = true }
# embassy-embedded-hal = {version = "0.1.0", path = "../embassy-embedded-hal" }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
atomic-polyfill = "1.0.1"
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
nb = "1.0.0"
cfg-if = "1.0.0"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
critical-section = "1.1"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
chrono = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.4", default-features = false }
gd32e5 = { version = "0.7", optional = true }


[features]
default = ["defmt", "timedriver-rtc"]
nightly = ["embedded-io/async"]
timedriver-rtc = ["embassy-time", "embassy-time?/tick-hz-32_768"]
timedriver-systick = ["embassy-time", "embassy-cortex-m/timedriver-systick", "embassy-time?/tick-hz-100"]
gd32e503 = ["gd32e5/gd32e503", "gd32e5/critical-section", "gd32e5/rt"]
